// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameRequest render should render component using quiplash data 1`] = `
<div>
  <div
    class="game-request-wrapper fade-in"
  >
    <div
      class="__react_component_tooltip t00000000-0000-4000-8000-000000000000 place-left type-dark"
      data-id="tooltip"
      id="t00000000-0000-4000-8000-000000000000"
    >
      <style
        aria-hidden="true"
      >
        
  	.t00000000-0000-4000-8000-000000000000 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t00000000-0000-4000-8000-000000000000.place-top {
        margin-top: -10px;
    }
    .t00000000-0000-4000-8000-000000000000.place-top::before {
        border-top: 8px solid transparent;
    }
    .t00000000-0000-4000-8000-000000000000.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t00000000-0000-4000-8000-000000000000.place-bottom {
        margin-top: 10px;
    }
    .t00000000-0000-4000-8000-000000000000.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t00000000-0000-4000-8000-000000000000.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t00000000-0000-4000-8000-000000000000.place-left {
        margin-left: -10px;
    }
    .t00000000-0000-4000-8000-000000000000.place-left::before {
        border-left: 8px solid transparent;
    }
    .t00000000-0000-4000-8000-000000000000.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t00000000-0000-4000-8000-000000000000.place-right {
        margin-left: 10px;
    }
    .t00000000-0000-4000-8000-000000000000.place-right::before {
        border-right: 8px solid transparent;
    }
    .t00000000-0000-4000-8000-000000000000.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
      </style>
    </div>
    <div
      class="game-request chosen"
      currentitem="false"
      data-html="true"
      data-tip="
            <div class=\\"tooltip\\">
                <p class=\\"tooltipText\\">
                    Requested 0 by Sir Goosewell
                </p>
                <div class=\\"status \\" />
            </div>"
      id="baseDiv"
    >
      <div
        class="game-request-body"
      >
        Quiplash
        <div
          class="options"
        >
          <img
            alt="lock"
            class="lock locked"
            src="file-stub"
          />
          <button
            class="deleteButton"
            type="button"
          >
            X
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GameRequest render should render component using survive the internet data 1`] = `
<div
  className="game-request-wrapper fade-in"
>
  <ReactTooltip
    clickable={false}
    effect="solid"
    insecure={true}
    place="left"
    resizeHide={true}
    wrapper="div"
  />
  <div
    className="game-request pending"
    data-html={true}
    data-tip="
            <div class=\\"tooltip\\">
                <p class=\\"tooltipText\\">
                    Requested 2 minutes ago by dcpesses
                </p>
                <div class=\\"status active\\" />
            </div>"
    id="baseDiv"
    onMouseEnter={[Function]}
  >
    <div
      className="game-request-body"
    >
      Survive The Internet (Party Pack 4)
      <div
        className="options"
      >
        <img
          alt="lock"
          className="lock unlocked"
          onClick={[Function]}
          src="file-stub"
        />
        <button
          className="deleteButton"
          onClick={[Function]}
          type="button"
        >
          X
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`GameRequest render should render component using survive the internet data 2`] = `
<div
  className="game-request-wrapper fade-in"
>
  <ReactTooltip
    clickable={false}
    effect="solid"
    insecure={true}
    place="left"
    resizeHide={true}
    wrapper="div"
  />
  <div
    className="game-request pending"
    data-html={true}
    data-tip="
            <div class=\\"tooltip\\">
                <p class=\\"tooltipText\\">
                    Requested 3 minutes ago by dcpesses
                </p>
                <div class=\\"status idle\\" />
            </div>"
    id="baseDiv"
    onMouseEnter={[Function]}
  >
    <div
      className="game-request-body"
    >
      Survive The Internet (Party Pack 4)
      <div
        className="options"
      >
        <img
          alt="lock"
          className="lock unlocked"
          onClick={[Function]}
          src="file-stub"
        />
        <button
          className="deleteButton"
          onClick={[Function]}
          type="button"
        >
          X
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`GameRequest render should render component using survive the internet data 3`] = `
<div
  className="game-request-wrapper fade-in"
>
  <ReactTooltip
    clickable={false}
    effect="solid"
    insecure={true}
    place="left"
    resizeHide={true}
    wrapper="div"
  />
  <div
    className="game-request pending"
    data-html={true}
    data-tip="
            <div class=\\"tooltip\\">
                <p class=\\"tooltipText\\">
                    Requested 4 minutes ago by dcpesses
                </p>
                <div class=\\"status disconnected\\" />
            </div>"
    id="baseDiv"
    onMouseEnter={[Function]}
  >
    <div
      className="game-request-body"
    >
      Survive The Internet (Party Pack 4)
      <div
        className="options"
      >
        <img
          alt="lock"
          className="lock unlocked"
          onClick={[Function]}
          src="file-stub"
        />
        <button
          className="deleteButton"
          onClick={[Function]}
          type="button"
        >
          X
        </button>
      </div>
    </div>
  </div>
</div>
`;
